--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.16.0",
     "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.10",
+    "slugify": "^1.6.6",
     "uuid": "^11.1.0"
   }
 }
